Cleanup build system

--- a/mlir-runtime/Makefile
+++ b/mlir-runtime/Makefile
@@ -1,23 +1,5 @@
-CC = /tools/riscv-llvm/bin/riscv32-unknown-elf-clang
-AR = /tools/riscv-llvm/bin/llvm-ar
-RANLIB = /tools/riscv-llvm/bin/llvm-ranlib
-
-CFLAGS =
-CFLAGS += -mcpu=snitch
-CFLAGS += -mcmodel=medany
-CFLAGS += -ffast-math
-CFLAGS += -fno-builtin-printf
-CFLAGS += -fno-common
-CFLAGS += -ffunction-sections
-CFLAGS += -static
-CFLAGS += -mllvm -enable-misched=false
-CFLAGS += -mno-relax
-CFLAGS += -menable-experimental-extensions
-CFLAGS += -O3
-CFLAGS += -Wall -Wextra -pedantic
-
-%.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+MLIR_RUNTIME_THIS := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
+include $(MLIR_RUNTIME_THIS)/../Makefile.rules
 
 libmlir-runtime.a: mlir-memref-alloc.o
 	$(AR) rc $@ $^
