Add install targets

--- a/mlir-runtime/Makefile
+++ b/mlir-runtime/Makefile
@@ -1,6 +1,9 @@
 MLIR_RUNTIME_DIRNAME := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 include $(MLIR_RUNTIME_DIRNAME)/../Makefile.rules
 
+# Default install prefix:
+PREFIX ?= $(MLIR_RUNTIME_DIRNAME)/install
+
 OBJS = mlir-memref-alloc.o
 
 CFLAGS += -I $(MLIR_RUNTIME_DIRNAME)/include
@@ -10,6 +13,11 @@ all: libmlir-runtime.a
 libmlir-runtime.a: $(OBJS)
 	$(AR) rc $@ $^
 	$(RANLIB) $@
+
+install: libmlir-runtime.a
+	mkdir -p $(PREFIX)/lib
+	cp -f libmlir-runtime.a $(PREFIX)/lib
+	cp -fr include $(PREFIX)/
 
 clean:
 	rm -f *.a *.o
