--- a/snitch-runtime/Makefile
+++ b/snitch-runtime/Makefile
@@ -20,7 +20,7 @@ OBJS += team.o
 OBJS += start_snitch_rtl.o
 
 CFLAGS += -I $(SNITCH_RUNTIME_DIRNAME)/include
-CFLAGS += -Wall -Wextra -pedantic -Wno-language-extension-token -Wno-gnu-statement-expression
+CFLAGS += -Wall -Wextra
 
 all: libsnitch-runtime.a
 
