--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
+          working-directory: docker
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
