--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -4,7 +4,7 @@ name: Create and publish the Toolchain docker image
 on:
   push:
     branches: ['main']
-    paths: ['docker/Dockerfile']
+    # paths: ['docker/Dockerfile']
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
