Revert broken workflow

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,7 +9,4 @@ RUN mkdir /src \
 FROM ghcr.io/pulp-platform/snitch@sha256:1a361160886ddee785ca809d0b9d30a283d0116b2761fd872ba9b69b82e2f2a6
 COPY --from=builder /opt/bin/snitch_cluster.vlt /opt/bin/snitch_cluster.vlt
 
-LABEL org.opencontainers.image.title="snitch-toolchain"
-LABEL org.opencontainers.image.version="0.1"
-LABEL org.opencontainers.image.description="Provides Snitch Verilator simulator and toolchains."
-LABEL org.opencontainers.image.authors="glifi.05sneaker@icloud.com"
+LABEL org.opencontainers.image.title="snitch-mlir-runtime"
