--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -4,12 +4,12 @@ name: Create and publish the Toolchain docker image
 on:
   push:
     branches: ['main']
-    paths: ['docker/snitch-toolchain/Dockerfile']
+    paths: ['docker/Dockerfile']
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: snitch-toolchain
+  IMAGE_NAME: ${{ github.repository }}
 
 # There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
@@ -42,7 +42,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: docker/snitch-toolchain/
+          context: docker/
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
